# mdebase

./: format.sh
mdm/: CMakeLists.txt  config.c  login.c  main.c  mdm.h  xserver.c
milkwm/: CMakeLists.txt
mpanel/: CMakeLists.txt
